--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>justinvilla.com</title>
-	<link rel="apple-touch-icon" sizes="57x57" href="http://justinvilla.com/apple-touch-icon-57x57.png">
+    <title>justinvilla.com</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="http://justinvilla.com/apple-touch-icon-57x57.png">
 </head>
 <body>
-<img src="ban.jpg" alt="Bananna" 
-
+    <img src="ban.jpg" alt="Bananna">
 </body>
 </html>
